--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^5.1.1",
     "thread-loader": "^3.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
